--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vinculo - Plataforma de Automação de Vendas para PMEs</title>
-    <meta name="description" content="Transforme leads em clientes com automação inteligente. CRM, WhatsApp automático e funis de conversão para PMEs brasileiras." />
+    <title>Vinculo - Plataforma de Automação de Vendas para Odontologias</title>
+    <meta name="description" content="Transforme leads em pacientes com automação inteligente. CRM, WhatsApp automático e funis de conversão para Odontologias brasileiras." />
     <meta name="author" content="Vinculo" />
     <meta name="keywords" content="automação vendas, whatsapp automático, crm, leads, pme, brasil" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Vinculo - Automação de Vendas para PMEs" />
-    <meta property="og:description" content="Transforme leads em clientes com automação inteligente. CRM, WhatsApp automático e funis de conversão." />
+    <meta property="og:title" content="Vinculo - Automação de Vendas e atendimento para Odontologias" />
+    <meta property="og:description" content="Transforme leads em pacientes com automação inteligente. CRM, WhatsApp automático e funis de conversão." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     <meta property="og:locale" content="pt_BR" />
@@ -19,8 +19,8 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@vinculo_br" />
-    <meta name="twitter:title" content="Vinculo - Automação de Vendas para PMEs" />
-    <meta name="twitter:description" content="Transforme leads em clientes com automação inteligente" />
+    <meta name="twitter:title" content="Vinculo - Automação de Vendas e atendimento para Odontologias" />
+    <meta name="twitter:description" content="Transforme leads em pacientes com automação inteligente" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <!-- Favicon -->
