Complete rebrand from Vinculo to Dentis
- Updated brand name throughout application (Vinculo → Dentis)
- Changed all email addresses (vinculo.com.br → dentis.com.br)
- Updated company names and social media handles
- Modified admin authentication to check for dentis domain
- Updated footer, contact section, and README.md
- Changed platform descriptions and welcome messages
- Updated demo credentials and mock user data
- Modified application constants and type definitions

--- a/index.html
+++ b/index.html
@@ -4,27 +4,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vinculo - Plataforma de Automação de Vendas para Odontologias</title>
-    <meta name="description" content="Transforme leads em pacientes com automação inteligente. CRM, WhatsApp automático e funis de conversão para Odontologias brasileiras." />
-    <meta name="author" content="Vinculo" />
-    <meta name="keywords" content="automação vendas, whatsapp automático, crm, leads, pme, brasil" />
+    <title>Dentis - Plataforma de Automação para Agendamentos e atendimento para Odontologias</title>
+    <meta name="description" content="Transforme leads em pacientes com com Agentes inteligentes. CRM, WhatsApp automático e Agentes de IAs para Odontologias brasileiras." />
+    <meta name="author" content="Dentis" />
+    <meta name="keywords" content="automação para agendamentos, whatsapp automático, agentes IAs, crm, leads, odontologias, brasil" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Vinculo - Automação de Vendas e atendimento para Odontologias" />
-    <meta property="og:description" content="Transforme leads em pacientes com automação inteligente. CRM, WhatsApp automático e funis de conversão." />
+    <meta property="og:title" content="Dentis - Automação para Agendamentos e atendimento para Odontologias" />
+    <meta property="og:description" content="Transforme leads em pacientes com Agentes inteligentes. CRM, WhatsApp automático e funis de conversão." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     <meta property="og:locale" content="pt_BR" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@vinculo_br" />
-    <meta name="twitter:title" content="Vinculo - Automação de Vendas e atendimento para Odontologias" />
+    <meta name="twitter:site" content="@dentis_br" />
+    <meta name="twitter:title" content="Dentis - Automação para Agendamentos e atendimento para Odontologias" />
     <meta name="twitter:description" content="Transforme leads em pacientes com automação inteligente" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/favicon.svg" />
     
     <!-- Preconnect for performance -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
