--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dentis - Plataforma de Automação para Agendamentos e atendimento para Odontologias</title>
-    <meta name="description" content="Transforme leads em pacientes com com Agentes inteligentes. CRM, WhatsApp automático e Agentes de IAs para Odontologias brasileiras." />
+    <title>Dentis - Plataforma SaaS de Automação de Vendas</title>
+    <meta name="description" content="Transforme leads em clientes com inteligência artificial. CRM, WhatsApp automático e automação de vendas para PMEs brasileiras." />
     <meta name="author" content="Dentis" />
-    <meta name="keywords" content="automação para agendamentos, whatsapp automático, agentes IAs, crm, leads, odontologias, brasil" />
+    <meta name="keywords" content="automação de vendas, whatsapp automático, agentes IAs, crm, leads, pmes, brasil" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Dentis - Automação para Agendamentos e atendimento para Odontologias" />
-    <meta property="og:description" content="Transforme leads em pacientes com Agentes inteligentes. CRM, WhatsApp automático e funis de conversão." />
+    <meta property="og:title" content="Dentis - Plataforma SaaS de Automação de Vendas" />
+    <meta property="og:description" content="Transforme leads em clientes com inteligência artificial. CRM, WhatsApp automático e automação de vendas." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     <meta property="og:locale" content="pt_BR" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@dentis_br" />
-    <meta name="twitter:title" content="Dentis - Automação para Agendamentos e atendimento para Odontologias" />
-    <meta name="twitter:description" content="Transforme leads em pacientes com automação inteligente" />
+    <meta name="twitter:site" content="@dentis_tech" />
+    <meta name="twitter:title" content="Dentis - Plataforma SaaS de Automação de Vendas" />
+    <meta name="twitter:description" content="Transforme leads em clientes com automação inteligente" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <!-- Favicon -->
