feat: Complete rebrand from Dentis to Odontomy
- Updated all brand references from 'Dentis' to 'Odontomy' across the entire application
- Changed brand name in navigation, footer, hero section, and all UI components
- Updated email domains from @dentis.com to @odontomy.com throughout mock data
- Modified social media handles from @dentis_tech to @odontomy_tech
- Updated company information, contact details, and website URLs
- Made footer year dynamic using new Date().getFullYear()
- Updated README.md with new brand information
- Fixed all authentication and admin components with new brand
- Updated constants, types, and store configurations
- Maintained visual identity and functionality while completing rebrand

This commit completes the full transformation from Dentis to Odontomy branding.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dentis - Plataforma SaaS de Automação de Vendas</title>
+    <title>Odontomy - Plataforma SaaS de Automação de Vendas</title>
     <meta name="description" content="Transforme leads em clientes com inteligência artificial. CRM, WhatsApp automático e automação de vendas para PMEs brasileiras." />
-    <meta name="author" content="Dentis" />
+    <meta name="author" content="Odontomy" />
     <meta name="keywords" content="automação de vendas, whatsapp automático, agentes IAs, crm, leads, pmes, brasil" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Dentis - Plataforma SaaS de Automação de Vendas" />
+    <meta property="og:title" content="Odontomy - Plataforma SaaS de Automação de Vendas" />
     <meta property="og:description" content="Transforme leads em clientes com inteligência artificial. CRM, WhatsApp automático e automação de vendas." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
@@ -18,8 +18,8 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@dentis_tech" />
-    <meta name="twitter:title" content="Dentis - Plataforma SaaS de Automação de Vendas" />
+    <meta name="twitter:site" content="@odontomy_tech" />
+    <meta name="twitter:title" content="Odontomy - Plataforma SaaS de Automação de Vendas" />
     <meta name="twitter:description" content="Transforme leads em clientes com automação inteligente" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
